2008-04-29 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/fselect.c: If a callback for a file selector is
	installed the prompt line and the input field aren't
	shown anymore. As Andrea Scopece pointed out the input
	field can't be used at all for file selectors with a
	callback (only a double click in the browser works)
	so it doesn't make sense to show it.

2008-04-28 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/forms.c: Jumping backwards with Shift-<TAB>
	through a set of input objects now works even if
	there are non-input objects in between.

	* demos/browserop.c: Bug removed that only surfaced
	now since clicking onto a button makes an input
	object lose the focus.

	* lib/canvas.c, lib/forms.c: On hiding a form it was
	forgotten to unmap the windows of canvases belonging
	to that form and to reset the ID of these windows.
	Resulted in an XError on unhiding the form. Thanks
	to Andrea Scopece for finding this bug.

2008-04-27 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/input.c: Correct leap year handling in date input
	validator. Multi-line input field don't receive a <TAB>
	anymore (which never did work anyway).

	* lib/forms.c: <TAB> can now also be used to move the
	focus out of a multi-line input field and into the next
	input field.

	* lib/version.c: The version output now contains the
	full copyright information, not just the first three
	lines.

2008-04-26 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/flresource.c: Library version information wasn't
	output when the '-flversion' option was given. Repaired
	by a patch Andrea Scopece send.

	* lib/forms.c: Scrollbars had been extempt from resizing
	due to the wrong assumption that they always would be
	childs of a composite object, which isn't the case.
	Thanks to Andrea Scopece for finding this problem.

	* lib/scrollbar.c: Horizontal scrollbars now only get	
	resized in x-direction per default, verticall ones in
	y-direction only.

2008-04-22 Jens Thoms Toerring    <jtt@toerring.de>
